argocd/truffle-prod/truffle-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truffle-consumer
  labels:
    app: truffle-consumer
spec:
  replicas: 0
  selector:
    matchLabels:
      app: truffle-consumer
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: truffle-consumer
    spec:
      serviceAccountName: truffle
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/truffle-prod/truffle-consumer
          name: truffle-consumer
          resources:
            requests:
              cpu: 10m
              memory: 384Mi
            limits:
              memory: 384Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: truffle-consumer
spec:
  type: ClusterIP
  selector:
    app: truffle-consumer
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: truffle-consumer
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - truffle-api.wafflestudio.com
  http:
    - corsPolicy:
        allowHeaders:
          - content-type
          - x-api-key
        allowMethods:
          - POST
          - OPTIONS
        allowOrigin:
          - "*"
      route:
        - destination:
            host: truffle-consumer
