argocd/truffle-prod/truffle-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truffle-dashboard
  labels:
    app: truffle-dashboard
spec:
  replicas: 0
  selector:
    matchLabels:
      app: truffle-dashboard
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: truffle-dashboard
    spec:
      serviceAccountName: truffle
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/truffle-prod/truffle-dashboard
          name: truffle-dashboard
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              memory: 384Mi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: truffle-dashboard
spec:
  type: ClusterIP
  selector:
    app: truffle-dashboard
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: truffle-dashboard
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - truffle.wafflestudio.com
  http:
    - match:
        - uri:
            prefix: /swagger-ui
        - uri:
            prefix: /v3/api-docs
        - uri:
            prefix: /webjars/swagger-ui
      route:
        - destination:
            host: truffle-dashboard
